Melhoria ns classes controler, services, configuracão e comentários